force-app/main/default/objects/Chain_Verification__c/Chain_Verification__c.object-meta.xml
<CustomObject>
    <description>Result of an integrity pass over a chain. Append-only by convention. See CONTRACT.md sec 4 and 6.3.</description>
    <label>Chain Verification</label>
    <nameField>
        <displayFormat>CV-{00000}</displayFormat>
        <label>Chain Verification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chain Verifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>