force-app/main/default/objects/Chain_Verification__c/fields/Break_At_Position__c.field-meta.xml
<CustomField>
    <fullName>Break_At_Position__c</fullName>
    <label>Break At Position</label>
    <description>The chain position where the first mismatch was found. Null when intact.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>