force-app/main/default/objects/Chain_Verification__c/fields/Chain_Key__c.field-meta.xml
<CustomField>
    <fullName>Chain_Key__c</fullName>
    <label>Chain Key</label>
    <description>The chain this verification covers (&lt;orgKey&gt;:&lt;agentApiName&gt;). Chains are per agent, so without this a verification result cannot be attributed to an agent.</description>
    <inlineHelpText>Which agent's chain this integrity pass walked.</inlineHelpText>
    <type>Text</type>
    <length>60</length>
</CustomField>