force-app/main/default/objects/Chain_Verification__c/fields/First_Position__c.field-meta.xml
<CustomField>
    <fullName>First_Position__c</fullName>
    <label>First Position</label>
    <description>The chain position at which this pass started.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>