force-app/main/default/objects/Chain_Verification__c/fields/Last_Position__c.field-meta.xml
<CustomField>
    <fullName>Last_Position__c</fullName>
    <label>Last Position</label>
    <description>The chain position at which this pass ended.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>