force-app/main/default/objects/Chain_Verification__c/fields/Links_Checked__c.field-meta.xml
<CustomField>
    <fullName>Links_Checked__c</fullName>
    <label>Links Checked</label>
    <description>Number of chain links recomputed and compared in this pass.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>