force-app/main/default/objects/Chain_Verification__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <description>Whether the verified segment was intact or a break was detected.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intact</fullName>
                <default>true</default>
                <label>Intact</label>
            </value>
            <value>
                <fullName>Break_Detected</fullName>
                <label>Break Detected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>