force-app/main/default/objects/Chain_Verification__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <label>Verified At</label>
    <description>When this verification pass ran.</description>
    <type>DateTime</type>
</CustomField>